@startuml
'https://plantuml.com/class-diagram

abstract class Pizza {
prepare():void
bake():void
cut():void
box():void
}

class OrderPizza {
}

class CheesePizza {
}

class GreekPizza {
}

class PizzaStore {
}
GreekPizza --|> Pizza
CheesePizza --|> Pizza

OrderPizza ..> Pizza
OrderPizza ..> CheesePizza
OrderPizza ..> GreekPizza

PizzaStore --* OrderPizza
@enduml